--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "express-mongo-sanitize": "^2.2.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "dotenv": "^17.2.3",
     "express-mongo-sanitize": "^2.2.0",
     "mongoose": "^9.0.1",
