--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
+    "express-mongo-sanitize": "^2.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
