--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "express-mongo-sanitize": "^2.2.0",
     "ioredis": "^5.9.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
