--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^17.2.3",
     "express-mongo-sanitize": "^2.2.0",
     "ioredis": "^5.9.0",
+    "nodemailer": "^7.0.12",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "xss": "^1.0.15"
@@ -52,6 +53,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.4",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
