--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.9.0",
     "nodemailer": "^7.0.12",
     "reflect-metadata": "^0.2.2",
