--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,16 @@ jobs:
     # GitHub start deze op voordat je stappen beginnen.
     # Ze zijn bereikbaar via 'localhost' op de opgegeven poorten.
     services:
-
+    mongo:
+        image: mongo:6 # Gebruik dezelfde versie als je productie (ongeveer)
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          
       redis:
         image: redis:alpine
         ports:
@@ -41,7 +50,8 @@ jobs:
       # Maak een .env die verbindt met de SERVICE containers hierboven
       - name: Create .env for tests
         run: |
-          # Redis (draait ook lokaal in de Service)
+          echo "MONGODB_URI=mongodb://localhost:27017/test_db" > .env
+          
           echo "REDIS_HOST=localhost" >> .env
           echo "REDIS_PORT=6379" >> .env
           
